docs: more java concepts added